# delta-rs

crates/deltalake/: Cargo.toml
crates/hdfs/: Cargo.toml
crates/hdfs/src/: config.rs  error.rs  lib.rs
python/src/: lib.rs
